[package]
name = "chord-quiz"
version = "0.1.0"
authors = ["Stig Johan Berggren <stigjb@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4.8"
num-traits = "0.2.11"
rand = { version = "0.7.3", features = ["wasm-bindgen"] }
serde = "1.0.110"
serde_derive = "1.0.110"
tonality = "0.1.1"
wasm-bindgen = "0.2.62"
wasm-logger = "0.2.0"
wee_alloc = "0.4.5"
yew = "0.16.2"
web-sys = "0.3.53"

[dev-dependencies]
wasm-bindgen-test = "0.3.12"

[profile.release]
panic = 'abort'
opt-level = 'z'
lto = true
